@@ -1,3 +1,9 @@
+2001-03-20  Ben Elliston  <bje@redhat.com>
+
+	* opc-itab.scm (-gen-insn-enum): Do not append a dummy `max'
+	instruction onto the instruction list. Define MAX_INSNS to be the
+	value of the last instruction enum plus one.
+
 2001-03-14  Nick Clifton  <nickc@redhat.com>
 
 	* utils.scm (copyright-fsf): Add 2001.  Remove (C).
